# ranked-retrieval-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  test.txt  test2.txt  test3.txt
data/processed/: docs.jsonl
src/: app.py  config.py  document_vectorizer.py  main.py  preprocessing.py  query_vectorizer.py  search.py
